--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -90,19 +90,21 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Female"
-                    android:buttonTint="@color/purple_200"/>
+                    android:buttonTint="@color/red"/>
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Male"
+                    android:buttonTint="@color/red"
                     android:layout_marginStart="25dp"/>
             </RadioGroup>
             <com.google.android.material.button.MaterialButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:cornerRadius="45dp"
-                android:backgroundTint="@color/purple_500"
+                android:backgroundTint="@color/red"
                 android:text="Register"
+                android:textAllCaps="false"
                 android:textColor="@color/white"/>
         </LinearLayout>
     </ScrollView>
