--- a/app/src/main/res/layout/fragment_save_info.xml
+++ b/app/src/main/res/layout/fragment_save_info.xml
@@ -1,14 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".SaveInfoFragment">
+ <ScrollView
+     android:layout_width="match_parent"
+     android:layout_height="match_parent">
+     <LinearLayout
+         android:layout_width="match_parent"
+         android:layout_height="match_parent"
+         android:layout_margin="10dp"
+         android:orientation="vertical">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
-</FrameLayout>
+         <com.google.android.material.textview.MaterialTextView
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:layout_marginTop="10dp"
+             android:background="@drawable/tv_border"
+             android:text="full name"
+             android:textColor="@color/pink"
+             android:textSize="20dp"
+             android:padding="17dp"/>
+         <com.google.android.material.textview.MaterialTextView
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:layout_marginTop="10dp"
+             android:background="@drawable/tv_border"
+             android:text="Username"
+             android:textColor="@color/pink"
+             android:textSize="20dp"
+             android:padding="17dp"/>
+         <com.google.android.material.textview.MaterialTextView
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:layout_marginTop="10dp"
+             android:background="@drawable/tv_border"
+             android:text="Email"
+             android:textColor="@color/pink"
+             android:textSize="20dp"
+             android:padding="17dp"/>
+         <com.google.android.material.textview.MaterialTextView
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:layout_marginTop="10dp"
+             android:background="@drawable/tv_border"
+             android:text="Password"
+             android:textColor="@color/pink"
+             android:textSize="20dp"
+             android:padding="17dp"/>
+         <com.google.android.material.textview.MaterialTextView
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:layout_marginTop="10dp"
+             android:background="@drawable/tv_border"
+             android:text="Gender"
+             android:textColor="@color/pink"
+             android:textSize="20dp"
+             android:padding="17dp"/>
+         <com.google.android.material.button.MaterialButton
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             app:cornerRadius="100dp"
+             android:backgroundTint="@color/pink"
+             android:text="Save"
+             android:textAllCaps="false"
+             android:textSize="17dp"
+             android:padding="17dp"
+             android:layout_marginTop="10dp"
+             android:textColor="@color/white"/>
+     </LinearLayout>
+ </ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
