--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="ligthblue">#54DBF1</color>
+    <color name="light_blue">#54DBF1</color>
+    <color name="pink">#DCE91EB6</color>
+    <color name="red">#DCEB3444</color>
+
 </resources>
