--- a/app/src/main/res/layout/fragment_save_info.xml
+++ b/app/src/main/res/layout/fragment_save_info.xml
@@ -15,6 +15,7 @@
          android:orientation="vertical">
 
          <com.google.android.material.textview.MaterialTextView
+             android:id="@+id/tv_full_name"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
@@ -24,6 +25,7 @@
              android:textSize="20dp"
              android:padding="17dp"/>
          <com.google.android.material.textview.MaterialTextView
+             android:id="@+id/tv_username"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
@@ -33,6 +35,7 @@
              android:textSize="20dp"
              android:padding="17dp"/>
          <com.google.android.material.textview.MaterialTextView
+             android:id="@+id/tv_email"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
@@ -42,6 +45,7 @@
              android:textSize="20dp"
              android:padding="17dp"/>
          <com.google.android.material.textview.MaterialTextView
+             android:id="@+id/tv_password"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
@@ -51,6 +55,7 @@
              android:textSize="20dp"
              android:padding="17dp"/>
          <com.google.android.material.textview.MaterialTextView
+             android:id="@+id/tv_gender_sf"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
@@ -60,6 +65,7 @@
              android:textSize="20dp"
              android:padding="17dp"/>
          <com.google.android.material.button.MaterialButton
+             android:id="@+id/btn_save"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:cornerRadius="100dp"
